--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ node_js:
 before_script:
   - npm install -g eslint
   #- npm install -g karma
+branches:
+  only:
+  - master    # 构建的分支
+cache:
+  directories:
+  - node_modules # 依赖缓存的目录
 install:
  - npm install -g gitbook-cli # 安装编译工具
 script:
