--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,14 @@ cache:
 install:
  - npm install -g gitbook-cli # 安装编译工具
 script:
-- gitbook build
+ - cd my-app-test
+ - npm install
+ - npm run build
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN # github 上的token环境变量
-  local-dir: ./_book/ ## 根据情况自定义到静态文件输出目录
+  local-dir: build ## 根据情况自定义到静态文件输出目录
   target-branch: gh-pages
   verbose: true
   on:
